# ChangeLog for net-wireless/irda-utils
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/irda-utils/ChangeLog,v 1.8 2005/04/07 16:52:02 blubb Exp $

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> irda-utils-0.9.16.ebuild:
  stable on amd64

  08 Feb 2005; Henrik Brix Andersen <brix@gentoo.org>
  +files/irda-utils-0.9.16-irkbd.patch, irda-utils-0.9.16.ebuild:
  Backported irkbd compile fix from 0.9.17_pre5, fixes bug #71771.

*irda-utils-0.9.17_pre5 (08 Feb 2005)

  08 Feb 2005; Henrik Brix Andersen <brix@gentoo.org>
  +irda-utils-0.9.17_pre5.ebuild:
  Version bump.

  11 Nov 2004; Henrik Brix Andersen <brix@gentoo.org>
  irda-utils-0.9.16.ebuild:
  Stable on x86.

  06 Nov 2004; Lars Weiler <pylon@gentoo.org> irda-utils-0.9.16.ebuild:
  Stable on ppc.

*irda-utils-0.9.16 (04 Oct 2004)

  04 Oct 2004; Henrik Brix Andersen <brix@gentoo.org>
  +files/irda-utils-gcc3.4-fix.patch, +files/irda-utils-rh1.patch,
  +irda-utils-0.9.16.ebuild:
  Version bump. Fixes bug #63475

*irda-utils-0.9.13 (04 Oct 2004)

  04 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> +metadata.xml,
  +files/irda.conf, +files/irda.rc, +irda-utils-0.9.13.ebuild,
  +irda-utils-0.9.15.ebuild:
  Moved from sys-apps/irda-utils

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  irda-utils-0.9.15.ebuild:
  Masked irda-utils-0.9.15.ebuild stable for ppc

  27 Jun 2004; David Holm <dholm@gentoo.org> irda-utils-0.9.15.ebuild:
  Added to ~ppc.

  24 Feb 2004; Martin Holzer <mholzer@gentoo.org> irda-utils-0.9.13.ebuild,
  irda-utils-0.9.15.ebuild:
  adding automake version. closes 42620.

  17 Jan 2004; Aron Griffis <agriffis@gentoo.org> irda-utils-0.9.15.ebuild:
  Fix bug 1797 by removing ${D}/etc/sysconfig if it is created by etc-install

  12 Jun 2003; <msterret@gentoo.org> irda-utils-0.9.15.ebuild:
  fix Header

*irda-utils-0.9.15 (15 Dec 2002)

  26 Jan 2003; Chad Huneycutt <chadh@gentoo.org> irda-utils-0.9.15.ebuild :