@@ -1,15 +1,11 @@
-MD5 4c740bc5a9b5600c9e3daae820416bf6 ChangeLog 3209
-MD5 f3943c39fa34d651cdc812e52b3e29ae irda-utils-0.9.13.ebuild 1199
-MD5 c7bc18deacdd89d8497519b274e0d7f4 irda-utils-0.9.15.ebuild 1584
-MD5 2735dec3555a74608019986ccef7945f irda-utils-0.9.16.ebuild 1956
 MD5 6ef9e9e53109672406a216550ceed462 irda-utils-0.9.17_pre5.ebuild 1981
+MD5 2735dec3555a74608019986ccef7945f irda-utils-0.9.16.ebuild 1956
+MD5 3e372f407879d49261fed052e89522eb ChangeLog 3321
 MD5 dc1773fc29727c205a632b4a780a5d21 metadata.xml 219
-MD5 10a500d681ec4e01d3d614987d5c9068 files/digest-irda-utils-0.9.13 69
-MD5 b853c309634581523261878b433cc4ac files/digest-irda-utils-0.9.15 69
 MD5 ef26e8a578b5a78843863316b3223e67 files/digest-irda-utils-0.9.16 69
-MD5 ed1b63c514ba2eaf9aa76adc8f53b8b1 files/digest-irda-utils-0.9.17_pre5 74
 MD5 b8b13a78fe0cbed2c3ce00afecd5adc1 files/irda-utils-0.9.16-irkbd.patch 505
 MD5 23a2271075f62051f30dd6ed9bbd3f85 files/irda-utils-gcc3.4-fix.patch 400
 MD5 fa2075c93b60699aaa4017ace46406ef files/irda-utils-rh1.patch 444
 MD5 db4f871dba7e66e861503b792ca0a7e3 files/irda.conf 313
+MD5 ed1b63c514ba2eaf9aa76adc8f53b8b1 files/digest-irda-utils-0.9.17_pre5 74
 MD5 b3f79d6bc205a1fde999cb893ba247b1 files/irda.rc 970
