@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/irda-utils
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/irda-utils/ChangeLog,v 1.8 2005/04/07 16:52:02 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/irda-utils/ChangeLog,v 1.9 2005/04/07 18:02:16 brix Exp $
+
+  07 Apr 2005; <brix@gentoo.org> -irda-utils-0.9.13.ebuild,
+  -irda-utils-0.9.15.ebuild:
+  Pruned old versions.
 
   07 Apr 2005; Simon Stelling <blubb@gentoo.org> irda-utils-0.9.16.ebuild:
   stable on amd64
